[gd_scene load_steps=5 format=2]

[ext_resource path="res://elementos/imagem/jogador/alavanca/alavanca_base.png" type="Texture" id=1]
[ext_resource path="res://elementos/imagem/jogador/alavanca/alavanca_topo.png" type="Texture" id=2]
[ext_resource path="res://addons/controle_de_toque/controle_toque.gd" type="Script" id=3]
[ext_resource path="res://recursos/jogo/jogador/alavanca_de_toque/alavanca_de_toque.gd" type="Script" id=4]

[node name="alavanca_de_toque" type="Node2D"]
position = Vector2( 360, 1000 )
script = ExtResource( 4 )

[node name="Base" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Topo" type="Sprite" parent="."]
scale = Vector2( 0.444565, 0.444565 )
texture = ExtResource( 2 )

[node name="ControleDeToque" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="arrastar_realizado" from="ControleDeToque" to="." method="_on_ControleDeToque_arrastar_realizado"]
[connection signal="toque_desfeito" from="ControleDeToque" to="." method="_on_ControleDeToque_toque_desfeito"]
[connection signal="toque_realizado" from="ControleDeToque" to="." method="_on_ControleDeToque_toque_realizado"]
